Added changes to basic authentication to allow the incoming calls from the ui application.

--- a/contacts-management-system/src/main/resources/application-test.properties
+++ b/contacts-management-system/src/main/resources/application-test.properties
@@ -23,8 +23,8 @@ spring.jpa.show-sql=true
 
 
 
-user.namee=antony1
-user.passwordd={noop}antony1
+user.namee=antony
+user.passwordd={noop}antony
 
 
 
